# trustlens

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PLAN_DEEP_INSPECTOR_SLA.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
deploy/kubernetes/: deployment.yaml
docs/: AGENTIC.md  BENCHMARKS.md  ENTERPRISE.md  INTEGRATION.md  LOCAL_GB10_END_PRODUCT.md  OPERATIONS.md  QUICKSTART.md  READINESS_REPORT.md
docs/compliance/: GDPR.md  PLAYBOOKS.md  README.md
examples/: quickstart.py
plugin/: plugin.json
plugins/trustlens/: plugin.json
scripts/: calibrate_lexical_thresholds.py  generate_trustlens_10k.py  launch_local.sh  run_deep_inspector_benchmark.py  run_pentest.py  run_trustlens_10k.py
tests/: test_adversarial.py  test_auth_and_admin.py  test_certificate.py  test_claim_dag.py  test_deep_inspector.py  test_engine.py  test_gateway.py  test_mcp_server.py  test_new_features.py  test_pentest.py  test_production_hardening.py  test_robustness.py  test_tenancy.py  test_trustlens_10k.py
trustlens/: __init__.py  version.py
trustlens/auth/: __init__.py  api_keys.py  dependencies.py  providers.py  rbac.py  sessions.py  users.py
trustlens/benchmarks/: __init__.py
trustlens/certificate/: __init__.py  schema.py  signer.py  store.py
trustlens/cli/: __init__.py  main.py
trustlens/compliance/: __init__.py  audit_log.py  breach.py  consent.py  dsar.py  frameworks.py  model_cards.py  profiles.py  retention.py  risk_register.py  transparency.py
trustlens/deep_inspector/: __init__.py  agentic_chain.py  engine.py  real_ssh_adapter.py  real_steering_adapter.py  ssh_adapter.py  steering_adapter.py
trustlens/gateway/: __init__.py  admin_api.py  agent_routes.py  app.py  auth_routes.py  backends.py  backends_anthropic.py  backends_ollama.py  compliance_routes.py  dashboard.py  event_log.py  kb_admin.py  ops_routes.py  ratelimit.py  schemas.py  verification_tier.py
trustlens/incidents/: __init__.py
trustlens/integrations/: __init__.py
trustlens/kb/: __init__.py  versioning.py
trustlens/mcp/: __init__.py  client.py  server.py
trustlens/observability/: __init__.py  metrics.py  tracing.py
trustlens/oracles/: __init__.py  base.py  cache.py  customer_kb.py  negation_aware.py  registry.py  vector_kb.py  wikidata.py
trustlens/pentest/: __init__.py  auth_vectors.py  injection_vectors.py  overload.py  runner.py  streaming_vectors.py
trustlens/robustness/: __init__.py  circuit_breaker.py  deadline.py  shadow_eval.py
(+56 files in other folders)
